--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
 <li><a href="http://173.192.147.22/?fromuid=1209073" target="_blank">爱碧论坛</a></li>
 <li><a href="http://www.kanxav.ga/?fromuid=1382595" target="_blank">XIAAV论坛</a></li>
 <li><a href="http://www.aixbbs.xyz/?fromuid=1199668" target="_blank">九爱城社区</a></li>
-<li><a href="http://www.mayaun.com/index.php" target="_blank">玛雅网</a></li>
+<li><a href="http://www.mayathe.com/index.php" target="_blank">玛雅网</a></li>
 <li><a href="http://super.taoy9.com/?fromuid=153059" target="_blank">桃隐社区</a></li>
 <li><a href="http://www.avlang7.info/index.php?a=3886" target="_blank">AV狼</a></li>
 <li><a href="http://ddxxbbs.net/?fromuid=406113" target="_blank">新不夜城</a></li>
@@ -108,7 +108,7 @@
 <li><a href="http://namethatporn.com/" target="_blank">NameThatPorn</a></li>
 <li><a href="http://www.piring.com/bbs/tcn/?fromuid=2061069" target="_blank">痴汉俱乐部</a></li>
 <li><a href="http://108.171.242.244/" target="_blank">MyHd1080</a></li>
-<li><a href="http://t3.9laik.live/pw/" target="_blank">1024核工厂</a></li>
+<li><a href="http://1024x3.com/pw/" target="_blank">1024核工厂</a></li>
 <li><a href="http://www.51youba.cc/?fromuid=1577" target="_blank">老司机论坛</a></li>
 <li><a href="http://redditlist.com/nsfw" target="_blank">redditlist</a></li>
 <li><a href="http://45.32.51.95/?fromuid=2571826" target="_blank">捷克论坛</a></li>
@@ -118,7 +118,7 @@
 <li><a href="http://bbs.gogo.la/" target="_blank">高高啦討論區</a></li>
 <li><a href="https://fastzone.org/?fromuid=99373" target="_blank">無限討論區</a></li>
 <li><a href="http://bbs.sex169.biz/?fromuid=141932" target="_blank">SEX169 論壇</a></li>
-<li><a href="http://www.mimixyz.com/" target="_blank">咪咪爱</a></li>
+<li><a href="http://www.mimilege.com/" target="_blank">咪咪爱</a></li>
 <li><a href="http://www.naluone-gp.com/forum/index.php" target="_blank">娜鲁湾论坛</a></li>
 <li><a href="http://www.ykt6.com/" target="_blank">迎客堂</a></li>
 <li><a href="http://dio66.net/?fromuid=2077160" target="_blank">魔王の家</a></li>
@@ -137,13 +137,13 @@
 <li><a href="https://caoav.net/" target="_blank">CaoAV</a></li>
 <li><a href="https://bbs.caoav.net/?fromuid=29070" target="_blank">CaoAV社区</a></li>
 <li><a href="http://www.99rebbs6.com/?fromuid=4521" target="_blank">久久热论坛</a></li>
-<li><a href="http://www.youbbbs.co/?fromuid=65678" target="_blank">有B吗？</a></li>
+<li><a href="http://ww-youbbb.com/?fromuid=65678" target="_blank">有B吗？</a></li>
 <li><a href="http://198.15.119.146/forum.php?fromuid=3234239" target="_blank">比思论坛</a></li>
 <li><a href="http://bbx169.com/?fromuid=1010710" target="_blank">百姓阁</a></li>
 <li><a href="http://www.ttlang.xyz/?fromuid=3952405" target="_blank">桃太狼</a></li>
 <li><a href="http://kb978.com/?fromuid=19246" target="_blank">9453社區</a></li>
 <li><a href="http://www.yxj259.com/?fromuid=416640" target="_blank">亿性家</a></li>
-<li><a href="http://www.xav333.com/forum.php" target="_blank">XIAAV论坛</a></li>
+<li><a href="http://www.xiaav.la/" target="_blank">XIAAV论坛</a></li>
 <li><a href="http://hd2046.info/" target="_blank">AV 天空</a></li>
 <li><a href="https://ilbeya12.com/" target="_blank">ilbeya5</a></li>
 <li><a href="http://www.thai-pix.com/" target="_blank">Thai-Pix</a></li>
@@ -237,6 +237,7 @@
 		<strong><a name="/5/">国内视频</a></strong>
 		<div class="linkl">
 		<ul>
+<li><a href="http://www.qilindyw.com/" target="_blank">麒麟福利网</a></li>
 <li><a href="http://www.dushewang.top/" target="_blank">毒蛇AV影院</a></li>
 <li><a href="http://www.boduoyejieyi.pw/" target="_blank">波多野结衣电影</a></li>
 <li><a href="http://www.tg106.com/" target="_blank">色妹妹视频</a></li>
@@ -256,29 +257,30 @@
 <li><a href="http://cb106.com/" target="_blank">青草视频</a></li>
 <li><a href="http://www.yyj78.com/" target="_blank">涩涩爱</a></li>
 <li><a href="http://www.zhaoav.xyz/" target="_blank">青青草</a></li>
+<li><a href="http://www.51lulu.info/" target="_blank">51撸撸</a></li>
 <li><a href="http://yingtaopa.com/" target="_blank">樱桃视频</a></li>
 <li><a href="http://qingcaopa.com/" target="_blank">轻草视频</a></li>
 <li><a href="http://lvchatube.com/" target="_blank">绿茶视频</a></li>
 <li><a href="http://hongxingme.com/" target="_blank">红杏视频</a></li>
 <li><a href="http://mymmv2.com/" target="_blank">V2视频</a></li>
 <li><a href="http://d8lulu.com/" target="_blank">D8视频</a></li>
+<li><a href="http://dcshipin.com/" target="_blank">灯草视频</a></li>
 <li><a href="http://www.s1shipin.com/" target="_blank">色艺视频</a></li>
+<li><a href="http://www.pddav.com/" target="_blank">嫖老师AV</a></li>
 <li><a href="http://www.444ap.com/" target="_blank">日本AV电影</a></li>
 <li><a href="http://www.8090yule.com/" target="_blank">8090av影院</a></li>
 <li><a href="http://www.tianxingseai.top/" target="_blank">甜性涩爱</a></li>
 <li><a href="http://www.sejishikong.top/" target="_blank">色即是空</a></li>
 <li><a href="http://m.dongliuvv.com/" target="_blank">东流AV影院</a></li>
-<li><a href="http://www.taoludy.com/" target="_blank">淘撸在线AV</a></li>
-<li><a href="http://www.xigua110.pw/" target="_blank">手机午夜大片</a></li>
 <li><a href="http://www.ziyetvv.com/" target="_blank">紫夜AV电影</a></li>
 <li><a href="http://www.langziav.top/" target="_blank">浪子AV电影</a></li>
 <li><a href="http://www.repianvv.pw/" target="_blank">热片SeX大电影</a></li>
+<li><a href="http://www.xinghuoban.top/" target="_blank">性伙伴电影</a></li>
 <li><a href="http://www.fulisuola.top/" target="_blank">福利电影</a></li>
 <li><a href="http://www.haokan666.top/" target="_blank">好看AV站</a></li>
 <li><a href="http://www.linjiajiejie.top/" target="_blank">邻家姐姐电影</a></li>
 <li><a href="http://qq.sinaqqweibo.top/" target="_blank">撸一夜视频</a></li>
 <li><a href="http://www.909xf.com/" target="_blank">蚂蚁视频</a></li>
-<li><a href="http://www.51lulu.info/" target="_blank">51撸撸</a></li>
 <li><a href="http://www.caoiii.net/" target="_blank">超爱视频</a></li>
 <li><a href="http://www.yaocao888.com/" target="_blank">要操吧</a></li>
 <li><a href="http://laoshiji3758.com/" target="_blank">天天爱视频</a></li>
@@ -290,7 +292,6 @@
 <li><a href="http://www.bbbb8.info/" target="_blank">B8视频</a></li>
 <li><a href="http://www.rraiav.com/" target="_blank">夜夜爱AV</a></li>
 <li><a href="http://www.1xs6.com/" target="_blank">久久热精品</a></li>
-<li><a href="http://www.3pfun.ga/" target="_blank">3pfun</a></li>
 <li><a href="http://ziyule.xyz/" target="_blank">自娱乐</a></li>
 <li><a href="http://www.papapavdo.gq/" target="_blank">啪啪啪视频</a></li>
 <li><a href="http://www.luluba.ml/" target="_blank">lulu吧在线</a></li>
@@ -304,18 +305,14 @@
 <li><a href="http://www.taoluyingyuan.com/" target="_blank">套路影院</a></li>
 <li><a href="http://www.99zzf.com/" target="_blank">大香蕉网</a></li>
 <li><a href="http://www.ppp166.com/" target="_blank">伦理片大全</a></li>
-<li><a href="http://www.wpzy7.com/" target="_blank">超碰</a></li>
 <li><a href="http://9388av.com/" target="_blank">撸你妹吖</a></li>
 <li><a href="http://www.eeey123.com/" target="_blank">88微拍福利</a></li>
 <li><a href="http://www.yyy151.com/" target="_blank">光棍影院</a></li>
 <li><a href="http://www.tvtv98.com/" target="_blank">婷婷五月</a></li>
 <li><a href="http://www.52x.club/" target="_blank">我爱插</a></li>
-<li><a href="http://www.91lu.club/" target="_blank">就要撸</a></li>
 <li><a href="http://www.langnizi.com/" target="_blank">浪妮子视频</a></li>
 <li><a href="http://www.lxx01.co/" target="_blank">撸穴穴</a></li>
 <li><a href="http://www.avzhao.cc/" target="_blank">找AV上</a></li>
-<li><a href="http://9388av.com/" target="_blank">撸你妹吖</a></li>
-<li><a href="http://www.kedou69.info/" target="_blank">蝌蚪娱乐</a></li>
 <li><a href="http://www.kedougood.com/" target="_blank">柯兜在线</a></li>
 <li><a href="http://www.yyluav.com/" target="_blank">夜夜撸AV</a></li>
 <li><a href="http://www.fx1200.com/" target="_blank">咪咪影院</a></li>
@@ -329,9 +326,7 @@
 <li><a href="http://www.yese1024.com/" target="_blank">夜色视频</a></li>
 <li><a href="http://www.chunsegan.com/" target="_blank">春色视频</a></li>
 <li><a href="http://fire2sp.com/" target="_blank">火兔视频</a></li>
-<li><a href="http://dcshipin.com/" target="_blank">灯草视频</a></li>
 <li><a href="http://caol66.com/" target="_blank">草榴视频</a></li>
-<li><a href="http://www.56ava.com/" target="_blank">桃花岛</a></li>
 <li><a href="http://91888.ga/" target="_blank">A福利视频</a></li>
 <li><a href="http://www.avlezi.com/" target="_blank">AV乐子</a></li>
 <li><a href="http://www.caopengwang.top/" target="_blank">超碰AV网</a></li>
@@ -339,7 +334,7 @@
 <li><a href="http://www.yaoav7.com/" target="_blank">要AV高清视频</a></li>
 <li><a href="http://chaopengzaixianshipin.xyz/" target="_blank">carpron97</a></li>
 <li><a href="http://www.yudongxian.com/" target="_blank">玉洞仙</a></li>
-<li><a href="http://lulunai.com/" target="_blank">撸撸奶</a></li>
+<li><a href="http://www.wojiuyaolu.com/" target="_blank">撸撸奶</a></li>
 <li><a href="http://www.mowang.info/" target="_blank">魔王在线</a></li>
 <li><a href="http://www.99zzpp.com/" target="_blank">99自拍</a></li>
 <li><a href="http://go.60990.biz/" target="_blank">蝌蚪窝</a></li>
@@ -353,6 +348,7 @@
 <li><a href="http://www.7mav.net/" target="_blank">7M视频</a></li>
 <li><a href="http://avpapa.co/" target="_blank">Avpapa</a></li>
 <li><a href="http://www.5xxx1.com/" target="_blank">5X社区</a></li>
+<li><a href="http://www.56ava.com/" target="_blank">桃花岛</a></li>
 <li><a href="http://www.qqqqmao.com/" target="_blank">东京热</a></li>
 <li><a href="http://99ff3.com/" target="_blank">久久热视频</a></li>
 <li><a href="http://www.rxl1024.com/" target="_blank">任性撸</a></li>
@@ -394,7 +390,7 @@
 <li><a href="http://www.13jiuseteng.com/" target="_blank">九涩腾</a></li>
 <li><a href="http://www.meimei7.com/" target="_blank">在线手机视频</a></li>
 <li><a href="https://avhd101.com/" target="_blank">AVHD101</a></li>
-<li><a href="http://www.jav513.com/" target="_blank">宅男频道</a></li>
+<li><a href="http://www.uukk8822.com/" target="_blank">宅男频道</a></li>
 <li><a href="http://www.megaline.co/Cazn2" target="_blank">91porn</a></li>
 				    </ul>
 		</div>
@@ -556,6 +552,7 @@
 		<div class="linkl">
 		<ul>
 <li><a href="http://ywzd1.com/s/?fromuid=574073" target="_blank">欲望之都</a></li>
+<li><a href="http://lsjxingxi.com/" target="_blank">老司机性息</a></li>
 <li><a href="http://www.fu31.com/" target="_blank">互撸娃福利</a></li>
 <li><a href="http://www.fou3.com/" target="_blank">爬花楼</a></li>
 <li><a href="http://www.cvk3.com/?fromuid=54648" target="_blank">爱妻俱乐部</a></li>
