--- a/index.html
+++ b/index.html
@@ -71,7 +71,6 @@
 <li><a href="http://www.qiseshequ.info/" target="_blank">奇色社区</a></li>
 <li><a href="http://www.ppzy8.com/" target="_blank">啪啪资源吧</a></li>
 <li><a href="http://204.44.109.178/index.htm" target="_blank">草原狼论坛</a></li>
-<li><a href="http://www.sineed18.info/?fromuid=72524" target="_blank">任我睇</a></li>
 <li><a href="http://www.mf28.xyz/" target="_blank">蜜蜂社区</a></li>
 <li><a href="http://www.99hdgc.com/?fromuid=320" target="_blank">99爱唯工厂</a></li>
 <li><a href="http://107.180.71.83/?fromuid=16201" target="_blank">涩呢妹·SNM</a></li>
@@ -292,12 +291,6 @@
 <li><a href="http://www.bbbb8.info/" target="_blank">B8视频</a></li>
 <li><a href="http://www.rraiav.com/" target="_blank">夜夜爱AV</a></li>
 <li><a href="http://www.1xs6.com/" target="_blank">久久热精品</a></li>
-<li><a href="http://ziyule.xyz/" target="_blank">自娱乐</a></li>
-<li><a href="http://www.papapavdo.gq/" target="_blank">啪啪啪视频</a></li>
-<li><a href="http://www.luluba.ml/" target="_blank">lulu吧在线</a></li>
-<li><a href="http://www.javdo.ga/" target="_blank">JAV在线视频</a></li>
-<li><a href="http://www.javdo.ga/" target="_blank">18+在线视频</a></li>
-<li><a href="http://www.javdo.ga/" target="_blank">Cao78视频</a></li>
 <li><a href="http://www.666jjy.com/" target="_blank">涩情小电影</a></li>
 <li><a href="http://www.gogo199.com/" target="_blank">妓出阁</a></li>
 <li><a href="http://huojianp1.pw/" target="_blank">火箭视频</a></li>
@@ -415,6 +408,8 @@
 <li><a href="http://www.shameless.com/" target="_blank">Shameless</a></li>
 <li><a href="http://userporn.com/" target="_blank">Userporn</a></li>
 <li><a href="http://www.fetishshrine.com/" target="_blank">Fetish Shrine</a></li>
+<li><a href="http://www.freehqpornmovies.com/" target="_blank">Free Hq Porn</a></li>
+<li><a href="http://www.freshteenvideos.com/" target="_blank">FreshTeenVideos</a></li>
 <li><a href="http://www.asianpornmovies.com/" target="_blank">Asianpornmovies</a></li>
 <li><a href="http://zbporn.com/" target="_blank">ZBPORN</a></li>
 <li><a href="http://www.tub99.com/" target="_blank">TUB99</a></li>
@@ -497,6 +492,7 @@
 <li><a href="http://www.sizuvip.com/?fromuid=29341" target="_blank">丝足vip</a></li>
 <li><a href="http://www.meigui98.cc/?fromuid=161579" target="_blank">玫瑰酒吧</a></li>
 <li><a href="https://lxty66.com/" target="_blank">莲秀图院</a></li>
+<li><a href="http://huaban.com/boards/16607428/" target="_blank">爱莲说</a></li>
 <li><a href="http://voyeurhit.com/" target="_blank">偷拍视频</a></li>
 <li><a href="http://bdsmland.org/" target="_blank">Bdsmland</a></li>
 <li><a href="http://www.oklesbians.com/" target="_blank">OK LesBians</a></li>
@@ -594,6 +590,7 @@
 <li><a href="http://www.wndflb.com/" target="_blank">福利吧论坛</a></li>
 <li><a href="http://www.douban.com/group/yaoqingzhuce/" target="_blank">邀请码小组</a></li>
 <li><a href="http://zfuli.wang/?fromuid=1539" target="_blank">找福利网论坛</a></li>
+<li><a href="http://www.lusir8.com/" target="_blank">撸涩吧</a></li>
 <li><a href="http://www.wg438.com/" target="_blank">超碰论坛</a></li>
 <li><a href="http://www.lufuliba.com/" target="_blank">撸福利吧</a></li>
 <li><a href="http://fltty.net/" target="_blank">福利天天有</a></li>
