--- a/index.html
+++ b/index.html
@@ -172,6 +172,7 @@
 <li><a href="http://www.1080dh.com/" target="_blank">1080导航</a></li>
 <li><a href="http://www.bagunian.info/" target="_blank">八姑娘导航</a></li>
 <li><a href="http://www.78links.com/" target="_blank">78导航</a></li>
+<li><a href="http://www.lansedh.ml/" target="_blank">蓝色导航3.0</a></li>
 <li><a href="http://www.xiushe.info/" target="_blank">羞射福利导航</a></li>                            
 <li><a href="http://www.09kg.com/" target="_blank">第九福利导航</a></li>
 <li><a href="http://www.3031177.com/" target="_blank">通幽福利导航</a></li>
