--- a/index.html
+++ b/index.html
@@ -149,12 +149,12 @@
 <li><a href="http://www.91szs.com/" target="_blank">91涩中涩</a></li>
 <li><a href="http://aa2n.com/" target="_blank">三涩论坛</a></li>
 <li><a href="http://taohuabbs.info/?fromuid=70941" target="_blank">桃花族</a></li>
-<li><a href="http://cc.umpb.org/index.php?u=296710&ext=96e5d" target="_blank">草榴社区2</a></li>
-<li><a href="http://cc.umyp.org/index.php?u=296710&ext=96e5d" target="_blank">草榴社区3</a></li>
-<li><a href="http://cc.ufgn.org/index.php?u=296710&ext=96e5d" target="_blank">草榴社区4</a></li>
-<li><a href="http://cc.uhen.org/index.php?u=296710&ext=96e5d" target="_blank">草榴社区5</a></li>
-<li><a href="http://cc.ukmz.org/index.php?u=296710&ext=96e5d" target="_blank">草榴社区6</a></li>
-<li><a href="http://cc.uqsk.org/index.php?u=296710&ext=96e5d" target="_blank">草榴社区7</a></li>
+<li><a href="http://cl.8qb.xyz/index.php?u=296710&ext=96e5d" target="_blank">草榴社区2</a></li>
+<li><a href="http://cl.5ug.pw/index.php?u=296710&ext=96e5d" target="_blank">草榴社区3</a></li>
+<li><a href="http://dz.zk0.info/index.php?u=296710&ext=96e5d" target="_blank">草榴社区4</a></li>
+<li><a href="http://c6.3hx.info/index.php?u=296710&ext=96e5d" target="_blank">草榴社区5</a></li>
+<li><a href="http://cl.eg3.bid/index.php?u=296710&ext=96e5d" target="_blank">草榴社区6</a></li>
+<li><a href="http://cl.yf6.win/index.php?u=296710&ext=96e5d" target="_blank">草榴社区7</a></li>
 				    </ul>
 		</div>
 		</div>
@@ -283,6 +283,7 @@
 <li><a href="http://www.caoiii.net/" target="_blank">超爱视频</a></li>
 <li><a href="http://www.yaocao888.com/" target="_blank">要操吧</a></li>
 <li><a href="http://laoshiji3758.com/" target="_blank">天天爱视频</a></li>
+<li><a href="http://www.avnvlang.win/" target="_blank">AV女郎</a></li>
 <li><a href="http://www.rr1919.com/" target="_blank">丁香五月</a></li>
 <li><a href="http://sae8.info/1.php" target="_blank">sae8</a></li>
 <li><a href="http://www.91av.club/" target="_blank">91AV俱乐部</a></li>
@@ -344,7 +345,7 @@
 <li><a href="http://www.56ava.com/" target="_blank">桃花岛</a></li>
 <li><a href="http://www.qqqqmao.com/" target="_blank">东京热</a></li>
 <li><a href="http://99ff3.com/" target="_blank">久久热视频</a></li>
-<li><a href="http://www.rxl1024.com/" target="_blank">任性撸</a></li>
+<li><a href="http://www.boboru.com/" target="_blank">波波乳</a></li>
 <li><a href="http://www.aotu9.com/" target="_blank">凹凸视频</a></li>
 <li><a href="http://www.lu2363.com/" target="_blank">撸尔山</a></li>
 <li><a href="http://qjj22.com/" target="_blank">骑姐姐</a></li>
@@ -375,6 +376,7 @@
 <li><a href="http://avjidi.net/" target="_blank">AV基地</a></li>
 <li><a href="http://99rr11.com/" target="_blank">久久视频</a></li>
 <li><a href="http://hgg156.com/" target="_blank">坏哥哥</a></li>
+<a href="http://ddc400.com/" target="_blank">陌上花</a>
 <li><a href="http://www.twav13.com/" target="_blank">AV中文</a></li>
 <li><a href="http://kuav.tv/" target="_blank">高清在线AV</a></li>
 <li><a href="http://www.youppp.com/" target="_blank">有B吗？</a></li>
@@ -655,7 +657,6 @@
 <li><a href="http://blog.jav4you.com/" target="_blank">JAV4You</a></li>
 <li><a href="http://filmav.org/" target="_blank">Filmav</a></li>
 <li><a href="http://gay.jp/store/index18.php?url=/store/" target="_blank">Gay</a></li>
-<li><a href="http://www.share-av.com/" target="_blank">揭示板</a></li>
 <li><a href="http://gravure.harikonotora.net/" target="_blank">画像掲示板</a></li>
 <li><a href="http://www.jp-sex.com/amature/" target="_blank">素人大全集</a></li>
 <li><a href="http://avgoogle.net/" target="_blank">AVGoogle</a></li>
