--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 		<strong><a name="/3/">综合论坛</a></strong><strong style="padding:0 238px;color:#FF9900;font-size:15px;font-family:Microsoft YaHei;">蓝色小导航最新地址：<a href="http://dear.gq" target="_blank"><span style="color:#2bf7c0;">dear.gq</span></a> <a href="http://boat.ml" target="_blank"><span style="color:#2bf7c0;">boat.ml</span></a> <a href="http://hand.gq" target="_blank"><span style="color:#2bf7c0;">hand.gq</span></a></strong> 
 		<div class="linkl">
 		<ul>
-<li><a href="http://cl.gtta.pw/index.php?u=296710&ext=96e5d" target="_blank">草榴社区</a></li>
+<li><a href="http://cl.giit.us/index.php?u=296710&ext=96e5d" target="_blank">草榴社区</a></li>
 <li><a href="http://lady.cf/" target="_blank">精品福利</a></li>
 <li><a href="http://papa60.com/?fromuid=8" target="_blank">啪啪社区</a></li>
 <li><a href="http://fl47.co/?fromuid=5495" target="_blank">福利社区</a></li>
@@ -67,16 +67,14 @@
 <li><a href="http://www.hong07.com/" target="_blank">红秀资源网</a></li>
 <li><a href="http://xisezi.info/?fromuid=80" target="_blank">Xisezi精品</a></li>
 <li><a href="http://www.porna5.com/" target="_blank">Porn采集者</a></li>
-<li><a href="http://www.bsm5.info/" target="_blank">本色猫福利站</a></li>
 <li><a href="http://www.qiseshequ.info/" target="_blank">奇色社区</a></li>
-<li><a href="http://www.ppzy8.com/" target="_blank">啪啪资源吧</a></li>
+<li><a href="http://www.ppzy8.in/" target="_blank">啪啪资源吧</a></li>
 <li><a href="http://204.44.109.178/index.htm" target="_blank">草原狼论坛</a></li>
 <li><a href="http://www.mf28.xyz/" target="_blank">蜜蜂社区</a></li>
 <li><a href="http://www.99hdgc.com/?fromuid=320" target="_blank">99爱唯工厂</a></li>
 <li><a href="http://107.180.71.83/?fromuid=16201" target="_blank">涩呢妹·SNM</a></li>
 <li><a href="http://162.211.95.61/bbs/?fromuid=715" target="_blank">老王社区</a></li>
 <li><a href="http://www.yinshuku.com/" target="_blank">银书库</a></li>
-<li><a href="http://www.70b5.com/?fromuid=16580" target="_blank">麒麟臂论坛</a></li>
 <li><a href="http://cfukt.xyz/" target="_blank">CFUKT</a></li>
 <li><a href="http://6ni.info/forum.php" target="_blank">365论坛</a></li>
 <li><a href="http://18board.com/forum/" target="_blank">18p2p</a></li>
@@ -148,7 +146,7 @@
 <li><a href="http://www.thai-pix.com/" target="_blank">Thai-Pix</a></li>
 <li><a href="http://www.91szs.com/" target="_blank">91涩中涩</a></li>
 <li><a href="http://aa2n.com/" target="_blank">三涩论坛</a></li>
-<li><a href="http://taohuabbs.info/?fromuid=70941" target="_blank">桃花族</a></li>
+<li><a href="http://taohuabbs.net/?fromuid=70941" target="_blank">桃花族</a></li>
 <li><a href="http://cl.8qb.xyz/index.php?u=296710&ext=96e5d" target="_blank">草榴社区2</a></li>
 <li><a href="http://cl.5ug.pw/index.php?u=296710&ext=96e5d" target="_blank">草榴社区3</a></li>
 <li><a href="http://dz.zk0.info/index.php?u=296710&ext=96e5d" target="_blank">草榴社区4</a></li>
@@ -191,7 +189,6 @@
 <li><a href="http://www.666k6.com/" target="_blank">666福利导航</a></li>
 <li><a href="http://www.uusdh.com/" target="_blank">悠悠色导航</a></li>
 <li><a href="http://www.idiyi.biz/" target="_blank">第一色导航</a></li>
-<li><a href="http://www.damodh.com/" target="_blank">51VOB导航</a></li>
 <li><a href="http://www.semmdh.net/" target="_blank">色妹妹导航</a></li>
 <li><a href="http://lvjiabai1.info/" target="_blank">绿桃K导航</a></li>
 <li><a href="http://www.pigutu.pw/" target="_blank">第一福利导航</a></li>
@@ -199,7 +196,6 @@
 <li><a href="http://www.meiniang.pw/" target="_blank">媚娘福利导航</a></li>
 <li><a href="http://www.1024fuli.pw/" target="_blank">1024福利导航</a></li>
 <li><a href="http://ailovedh.com/" target="_blank">大爱导航</a></li>
-<li><a href="http://www.seevdo18.ga/" target="_blank">大人导航</a></li>
 <li><a href="http://www.soavdh.net/" target="_blank">搜AV导航</a></li>
 <li><a href="http://www.chihandh.com/" target="_blank">痴汉导航</a></li>
 <li><a href="http://nimadaohang.com/" target="_blank">尼玛导航</a></li>
@@ -220,7 +216,6 @@
 <li><a href="http://www.cangjigedh.com/" target="_blank">藏姬阁导航</a></li>
 <li><a href="http://91xfdh.com/" target="_blank">91性福导航</a></li>
 <li><a href="http://www.ds555.cc/" target="_blank">粉色男人導航</a></li>
-<li><a href="http://www.yidianpai.com/" target="_blank">一点拍导航</a></li>
 <li><a href="http://www.dagongji.me/" target="_blank">大公鸡导航网</a></li>
 <li><a href="http://www.sebadh.com/" target="_blank">色吧福利导航</a></li>
 <li><a href="http://www.99redao.top/" target="_blank">99热导航</a></li>
@@ -251,10 +246,12 @@
 <li><a href="http://www.slzxtv.com/" target="_blank">色郎在线</a></li>
 <li><a href="http://www.yslav.com/" target="_blank">夜色撸</a></li>
 <li><a href="http://www.caobiao345.com/" target="_blank">我要操婊</a></li>
+<li><a href="http://www.renyu88.com/" target="_blank">人鱼爸爸</a></li>
+<li><a href="http://www.94lua.com/" target="_blank">94撸啊</a></li>
+<li><a href="http://www.jjavs.xyz/" target="_blank">鸡鸡在线</a></li>
 <li><a href="http://chushui99.com/" target="_blank">初水视频</a></li>
 <li><a href="http://www.apian40.com/" target="_blank">A片迷</a></li>
 <li><a href="http://cb106.com/" target="_blank">青草视频</a></li>
-<li><a href="http://www.yyj78.com/" target="_blank">涩涩爱</a></li>
 <li><a href="http://www.zhaoav.xyz/" target="_blank">青青草</a></li>
 <li><a href="http://www.51lulu.info/" target="_blank">51撸撸</a></li>
 <li><a href="http://yingtaopa.com/" target="_blank">樱桃视频</a></li>
@@ -280,6 +277,7 @@
 <li><a href="http://www.linjiajiejie.top/" target="_blank">邻家姐姐电影</a></li>
 <li><a href="http://qq.sinaqqweibo.top/" target="_blank">撸一夜视频</a></li>
 <li><a href="http://www.909xf.com/" target="_blank">蚂蚁视频</a></li>
+<li><a href="http://www.yyj78.com/" target="_blank">涩涩爱</a></li>
 <li><a href="http://www.caoiii.net/" target="_blank">超爱视频</a></li>
 <li><a href="http://www.yaocao888.com/" target="_blank">要操吧</a></li>
 <li><a href="http://laoshiji3758.com/" target="_blank">天天爱视频</a></li>
@@ -376,7 +374,7 @@
 <li><a href="http://avjidi.net/" target="_blank">AV基地</a></li>
 <li><a href="http://99rr11.com/" target="_blank">久久视频</a></li>
 <li><a href="http://hgg156.com/" target="_blank">坏哥哥</a></li>
-<a href="http://ddc400.com/" target="_blank">陌上花</a>
+<li><a href="http://ddc400.com/" target="_blank">陌上花</a></li>
 <li><a href="http://www.twav13.com/" target="_blank">AV中文</a></li>
 <li><a href="http://kuav.tv/" target="_blank">高清在线AV</a></li>
 <li><a href="http://www.youppp.com/" target="_blank">有B吗？</a></li>
