--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 <li><a href="http://fl47.co/?fromuid=5495" target="_blank">福利社区</a></li>
 <li><a href="http://lovecityclub.com/bt/?u=701541" target="_blank">爱城</a></li>
 <li><a href="http://x77820.net/bbs/" target="_blank">Xiao77</a></li>
-<li><a href="http://174.127.195.195/bbs/index.php" target="_blank">色中色</a></li>
+<li><a href="http://174.127.195.198/bbs/index.php" target="_blank">色中色</a></li>
 <li><a href="http://104.194.212.12/forum/?fromuid=11991220" target="_blank">第一会所</a></li>
 <li><a href="http://se8girl.com/?fromuid=1096417" target="_blank">性吧春暖花开</a></li>
 <li><a href="http://www.gaohaolu.win/" target="_blank">高好撸</a></li>
@@ -179,14 +179,14 @@
 <li><a href="http://www.javavdh.com/" target="_blank">Javav导航</a></li>
 <li><a href="http://1253.cf/" target="_blank">A天堂导航</a></li>
 <li><a href="http://www.ssfldh.com/" target="_blank">色色福利导航</a></li>
+<li><a href="http://www.776dh.com/" target="_blank">776福利导航</a></li>
+<li><a href="http://www.666k6.com/" target="_blank">666福利导航</a></li>
 <li><a href="http://www.99fldh.com/" target="_blank">99福利导航</a></li>
 <li><a href="http://www.dabodh.com/" target="_blank">大波导航</a></li>
 <li><a href="http://www.fulidh.info/" target="_blank">夜火福利导航</a></li>
 <li><a href="http://74fuli.net/" target="_blank">骑士福利导航</a></li>
 <li><a href="http://fuli3758.com/" target="_blank">辣椒导航</a></li>
 <li><a href="http://bigefuli.com/" target="_blank">逼格福利导航</a></li>
-<li><a href="http://www.776dh.com/" target="_blank">776福利导航</a></li>
-<li><a href="http://www.666k6.com/" target="_blank">666福利导航</a></li>
 <li><a href="http://www.uusdh.com/" target="_blank">悠悠色导航</a></li>
 <li><a href="http://www.idiyi.biz/" target="_blank">第一色导航</a></li>
 <li><a href="http://www.semmdh.net/" target="_blank">色妹妹导航</a></li>
@@ -203,7 +203,6 @@
 <li><a href="http://www.dccwl.com/" target="_blank">色慰导航</a></li>
 <li><a href="http://www.yikufl.com/" target="_blank">一库福利导航</a></li>
 <li><a href="http://69dh.top/" target="_blank">69宅男福利导航</a></li>
-<li><a href="http://900010.la/" target="_blank">900010导航</a></li>
 <li><a href="http://www.dafjdh.com/" target="_blank">打飞机导航</a></li>
 <li><a href="http://yeyeliu.top/" target="_blank">夜夜流</a></li>
 <li><a href="http://www.caoluotuo.org/" target="_blank">草骆驼导航</a></li>
@@ -220,7 +219,6 @@
 <li><a href="http://www.sebadh.com/" target="_blank">色吧福利导航</a></li>
 <li><a href="http://www.99redao.top/" target="_blank">99热导航</a></li>
 <li><a href="http://www.cjkdl.xyz/" target="_blank">苍井空导航</a></li>
-<li><a href="http://www.mtzy8.com/" target="_blank">撸十次导航</a></li>
 <li><a href="http://g.e20.ru/" target="_blank">绿色小导航</a></li>
                     </ul>
 		</div>
@@ -257,8 +255,8 @@
 <li><a href="http://yingtaopa.com/" target="_blank">樱桃视频</a></li>
 <li><a href="http://qingcaopa.com/" target="_blank">轻草视频</a></li>
 <li><a href="http://lvchatube.com/" target="_blank">绿茶视频</a></li>
-<li><a href="http://hongxingme.com/" target="_blank">红杏视频</a></li>
-<li><a href="http://mymmv2.com/" target="_blank">V2视频</a></li>
+<li><a href="http://go69hx.com/" target="_blank">红杏视频</a></li>
+<li><a href="http://email.v2dizhi.at.gmail.com.vv9.space/" target="_blank">V2视频</a></li>
 <li><a href="http://d8lulu.com/" target="_blank">D8视频</a></li>
 <li><a href="http://dcshipin.com/" target="_blank">灯草视频</a></li>
 <li><a href="http://www.s1shipin.com/" target="_blank">色艺视频</a></li>
@@ -284,6 +282,7 @@
 <li><a href="http://www.avnvlang.win/" target="_blank">AV女郎</a></li>
 <li><a href="http://www.rr1919.com/" target="_blank">丁香五月</a></li>
 <li><a href="http://sae8.info/1.php" target="_blank">sae8</a></li>
+<li><a href="http://www.porn5.club/" target="_blank">Porn5视频</a></li>
 <li><a href="http://www.91av.club/" target="_blank">91AV俱乐部</a></li>
 <li><a href="http://www.luduobao.in/" target="_blank">撸多宝</a></li>
 <li><a href="http://www.qyule.in/" target="_blank">青娱乐</a></li>
@@ -292,12 +291,14 @@
 <li><a href="http://www.1xs6.com/" target="_blank">久久热精品</a></li>
 <li><a href="http://www.666jjy.com/" target="_blank">涩情小电影</a></li>
 <li><a href="http://www.gogo199.com/" target="_blank">妓出阁</a></li>
+<li><a href="http://www.saoniu.net/" target="_blank">骚妞在线</a></li>
 <li><a href="http://huojianp1.pw/" target="_blank">火箭视频</a></li>
 <li><a href="http://www.sesexia.com/" target="_blank">超快色色下</a></li>
 <li><a href="http://www.taoluyingyuan.com/" target="_blank">套路影院</a></li>
 <li><a href="http://www.99zzf.com/" target="_blank">大香蕉网</a></li>
 <li><a href="http://www.ppp166.com/" target="_blank">伦理片大全</a></li>
 <li><a href="http://9388av.com/" target="_blank">撸你妹吖</a></li>
+<li><a href="http://www.ribiav.xyz/" target="_blank">日逼av在线</a></li>
 <li><a href="http://www.eeey123.com/" target="_blank">88微拍福利</a></li>
 <li><a href="http://www.yyy151.com/" target="_blank">光棍影院</a></li>
 <li><a href="http://www.tvtv98.com/" target="_blank">婷婷五月</a></li>
@@ -306,7 +307,7 @@
 <li><a href="http://www.lxx01.co/" target="_blank">撸穴穴</a></li>
 <li><a href="http://www.avzhao.cc/" target="_blank">找AV上</a></li>
 <li><a href="http://www.kedougood.com/" target="_blank">柯兜在线</a></li>
-<li><a href="http://www.yyluav.com/" target="_blank">夜夜撸AV</a></li>
+<li><a href="http://www.caoliu6av.com/" target="_blank">草榴6av在线</a></li>
 <li><a href="http://www.fx1200.com/" target="_blank">咪咪影院</a></li>
 <li><a href="http://avlu.biz/" target="_blank">撸啊撸</a></li>
 <li><a href="http://www.51ganb.com/" target="_blank">官人我要</a></li>
@@ -342,7 +343,8 @@
 <li><a href="http://www.5xxx1.com/" target="_blank">5X社区</a></li>
 <li><a href="http://www.56ava.com/" target="_blank">桃花岛</a></li>
 <li><a href="http://www.qqqqmao.com/" target="_blank">东京热</a></li>
-<li><a href="http://99ff3.com/" target="_blank">久久热视频</a></li>
+<li><a href="http://999ss99.com/" target="_blank">久久热视频</a></li>
+<li><a href="http://qyl7.com/" target="_blank">青娱乐视频</a></li>
 <li><a href="http://www.boboru.com/" target="_blank">波波乳</a></li>
 <li><a href="http://www.aotu9.com/" target="_blank">凹凸视频</a></li>
 <li><a href="http://www.lu2363.com/" target="_blank">撸尔山</a></li>
@@ -377,6 +379,7 @@
 <li><a href="http://ddc400.com/" target="_blank">陌上花</a></li>
 <li><a href="http://www.twav13.com/" target="_blank">AV中文</a></li>
 <li><a href="http://kuav.tv/" target="_blank">高清在线AV</a></li>
+<li><a href="http://fcw3.com/" target="_blank">废柴视频网</a></li>
 <li><a href="http://www.youppp.com/" target="_blank">有B吗？</a></li>
 <li><a href="http://www.7u8e.com/" target="_blank">第九鲁</a></li>
 <li><a href="http://www.777vid.com/" target="_blank">PLAY 视频</a></li>
@@ -612,7 +615,7 @@
 <li><a href="http://www.repaik.com/" target="_blank">睿派克技术论坛</a></li>
 <li><a href="http://www.hdmee.com/" target="_blank">HD高清迷</a></li>
 <li><a href="http://gaoqing.la/" target="_blank">中国高清网</a></li>
-<li><a href="http://www.xixihd.com/" target="_blank">西西高清影视</a></li>
+<li><a href="https://www.wodehd.com/" target="_blank">我的高清影院</a></li>
 <li><a href="http://www.cmvcd.com/" target="_blank">草民电影网</a></li>
 <li><a href="http://www.ibtibt.com/" target="_blank">BT电影</a></li>
 <li><a href="http://majiamen.com/" target="_blank">马甲门论坛</a></li>
