--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 <li><a href="http://papa60.com/?fromuid=8" target="_blank">啪啪社区</a></li>
 <li><a href="http://fl47.co/?fromuid=5495" target="_blank">福利社区</a></li>
 <li><a href="http://lovecityclub.com/bt/?u=701541" target="_blank">爱城</a></li>
-<li><a href="http://x77820.net/bbs/" target="_blank">Xiao77</a></li>
+<li><a href="http://x77827.net/bbs/" target="_blank">Xiao77</a></li>
 <li><a href="http://174.127.195.198/bbs/index.php" target="_blank">色中色</a></li>
 <li><a href="http://104.194.212.12/forum/?fromuid=11991220" target="_blank">第一会所</a></li>
 <li><a href="http://se8girl.com/?fromuid=1096417" target="_blank">性吧春暖花开</a></li>
@@ -63,7 +63,6 @@
 <li><a href="http://lu6vip.com/" target="_blank">撸6VIP论坛</a></li>
 <li><a href="http://www.henhenlu999.xyz/" target="_blank">狠狠撸第二站</a></li>
 <li><a href="http://www.xinghao.ml/?fromuid=18" target="_blank">性好论坛</a></li>
-<li><a href="http://www.yesir.info/forum.php" target="_blank">夜色精選論壇</a></li>
 <li><a href="http://www.hong07.com/" target="_blank">红秀资源网</a></li>
 <li><a href="http://xisezi.info/?fromuid=80" target="_blank">Xisezi精品</a></li>
 <li><a href="http://www.porna5.com/" target="_blank">Porn采集者</a></li>
@@ -181,6 +180,7 @@
 <li><a href="http://www.ssfldh.com/" target="_blank">色色福利导航</a></li>
 <li><a href="http://www.776dh.com/" target="_blank">776福利导航</a></li>
 <li><a href="http://www.666k6.com/" target="_blank">666福利导航</a></li>
+<li><a href="http://luanpadh.com/" target="_blank">乱啪导航</a></li>
 <li><a href="http://www.99fldh.com/" target="_blank">99福利导航</a></li>
 <li><a href="http://www.dabodh.com/" target="_blank">大波导航</a></li>
 <li><a href="http://www.fulidh.info/" target="_blank">夜火福利导航</a></li>
@@ -218,6 +218,7 @@
 <li><a href="http://www.dagongji.me/" target="_blank">大公鸡导航网</a></li>
 <li><a href="http://www.sebadh.com/" target="_blank">色吧福利导航</a></li>
 <li><a href="http://www.99redao.top/" target="_blank">99热导航</a></li>
+<li><a href="http://www.1djb.xyz/" target="_blank">福利射导航</a></li>
 <li><a href="http://www.cjkdl.xyz/" target="_blank">苍井空导航</a></li>
 <li><a href="http://g.e20.ru/" target="_blank">绿色小导航</a></li>
                     </ul>
@@ -232,8 +233,9 @@
 <li><a href="http://www.qilindyw.com/" target="_blank">麒麟福利网</a></li>
 <li><a href="http://www.dushewang.top/" target="_blank">毒蛇AV影院</a></li>
 <li><a href="http://www.boduoyejieyi.pw/" target="_blank">波多野结衣电影</a></li>
-<li><a href="http://www.tg106.com/" target="_blank">色妹妹视频</a></li>
 <li><a href="http://www.youzzjj.xyz/" target="_blank">优优在线AV</a></li>
+<li><a href="http://www.6789meimei.com/" target="_blank">九姑娘</a></li>
+<li><a href="http://huojianp1.pw/" target="_blank">火箭视频</a></li>
 <li><a href="http://qusiji.com/" target="_blank">老司机视频</a></li>
 <li><a href="http://95big.pw/" target="_blank">95自拍视频</a></li>
 <li><a href="http://www.caoliuporn.com/" target="_blank">caoliu视频</a></li>
@@ -249,9 +251,7 @@
 <li><a href="http://www.jjavs.xyz/" target="_blank">鸡鸡在线</a></li>
 <li><a href="http://chushui99.com/" target="_blank">初水视频</a></li>
 <li><a href="http://www.apian40.com/" target="_blank">A片迷</a></li>
-<li><a href="http://cb106.com/" target="_blank">青草视频</a></li>
 <li><a href="http://www.zhaoav.xyz/" target="_blank">青青草</a></li>
-<li><a href="http://www.51lulu.info/" target="_blank">51撸撸</a></li>
 <li><a href="http://yingtaopa.com/" target="_blank">樱桃视频</a></li>
 <li><a href="http://qingcaopa.com/" target="_blank">轻草视频</a></li>
 <li><a href="http://lvchatube.com/" target="_blank">绿茶视频</a></li>
@@ -274,31 +274,28 @@
 <li><a href="http://www.haokan666.top/" target="_blank">好看AV站</a></li>
 <li><a href="http://www.linjiajiejie.top/" target="_blank">邻家姐姐电影</a></li>
 <li><a href="http://qq.sinaqqweibo.top/" target="_blank">撸一夜视频</a></li>
-<li><a href="http://www.909xf.com/" target="_blank">蚂蚁视频</a></li>
 <li><a href="http://www.yyj78.com/" target="_blank">涩涩爱</a></li>
 <li><a href="http://www.caoiii.net/" target="_blank">超爱视频</a></li>
 <li><a href="http://www.yaocao888.com/" target="_blank">要操吧</a></li>
 <li><a href="http://laoshiji3758.com/" target="_blank">天天爱视频</a></li>
-<li><a href="http://www.avnvlang.win/" target="_blank">AV女郎</a></li>
-<li><a href="http://www.rr1919.com/" target="_blank">丁香五月</a></li>
 <li><a href="http://sae8.info/1.php" target="_blank">sae8</a></li>
 <li><a href="http://www.porn5.club/" target="_blank">Porn5视频</a></li>
 <li><a href="http://www.91av.club/" target="_blank">91AV俱乐部</a></li>
 <li><a href="http://www.luduobao.in/" target="_blank">撸多宝</a></li>
 <li><a href="http://www.qyule.in/" target="_blank">青娱乐</a></li>
 <li><a href="http://www.bbbb8.info/" target="_blank">B8视频</a></li>
-<li><a href="http://www.rraiav.com/" target="_blank">夜夜爱AV</a></li>
+<li><a href="http://jibaxxoo.com/" target="_blank">jibaxxoo</a></li>
 <li><a href="http://www.1xs6.com/" target="_blank">久久热精品</a></li>
 <li><a href="http://www.666jjy.com/" target="_blank">涩情小电影</a></li>
 <li><a href="http://www.gogo199.com/" target="_blank">妓出阁</a></li>
 <li><a href="http://www.saoniu.net/" target="_blank">骚妞在线</a></li>
-<li><a href="http://huojianp1.pw/" target="_blank">火箭视频</a></li>
+<li><a href="http://www.6666my.cn/" target="_blank">夏娃高清视频</a></li>
+<li><a href="http://www.smporn.xyz/" target="_blank">神魔在线</a></li>
 <li><a href="http://www.sesexia.com/" target="_blank">超快色色下</a></li>
 <li><a href="http://www.taoluyingyuan.com/" target="_blank">套路影院</a></li>
 <li><a href="http://www.99zzf.com/" target="_blank">大香蕉网</a></li>
 <li><a href="http://www.ppp166.com/" target="_blank">伦理片大全</a></li>
-<li><a href="http://9388av.com/" target="_blank">撸你妹吖</a></li>
-<li><a href="http://www.ribiav.xyz/" target="_blank">日逼av在线</a></li>
+<li><a href="http://591ys.top/" target="_blank">噜噜阁在线</a></li>
 <li><a href="http://www.eeey123.com/" target="_blank">88微拍福利</a></li>
 <li><a href="http://www.yyy151.com/" target="_blank">光棍影院</a></li>
 <li><a href="http://www.tvtv98.com/" target="_blank">婷婷五月</a></li>
@@ -308,6 +305,8 @@
 <li><a href="http://www.avzhao.cc/" target="_blank">找AV上</a></li>
 <li><a href="http://www.kedougood.com/" target="_blank">柯兜在线</a></li>
 <li><a href="http://www.caoliu6av.com/" target="_blank">草榴6av在线</a></li>
+<li><a href="http://www.mmsao.club/" target="_blank">妹妹骚</a></li>
+<li><a href="http://www.taohua8.ml/" target="_blank">桃花视频</a></li>
 <li><a href="http://www.fx1200.com/" target="_blank">咪咪影院</a></li>
 <li><a href="http://avlu.biz/" target="_blank">撸啊撸</a></li>
 <li><a href="http://www.51ganb.com/" target="_blank">官人我要</a></li>
@@ -319,17 +318,13 @@
 <li><a href="http://www.yese1024.com/" target="_blank">夜色视频</a></li>
 <li><a href="http://www.chunsegan.com/" target="_blank">春色视频</a></li>
 <li><a href="http://fire2sp.com/" target="_blank">火兔视频</a></li>
+<li><a href="http://www.aisegeav.com/" target="_blank">爱色阁</a></li>
 <li><a href="http://caol66.com/" target="_blank">草榴视频</a></li>
 <li><a href="http://91888.ga/" target="_blank">A福利视频</a></li>
 <li><a href="http://www.avlezi.com/" target="_blank">AV乐子</a></li>
-<li><a href="http://www.caopengwang.top/" target="_blank">超碰AV网</a></li>
-<li><a href="http://jiujiuredizhi.xyz/" target="_blank">团团热视频</a></li>
-<li><a href="http://www.yaoav7.com/" target="_blank">要AV高清视频</a></li>
-<li><a href="http://chaopengzaixianshipin.xyz/" target="_blank">carpron97</a></li>
 <li><a href="http://www.yudongxian.com/" target="_blank">玉洞仙</a></li>
 <li><a href="http://www.wojiuyaolu.com/" target="_blank">撸撸奶</a></li>
 <li><a href="http://www.mowang.info/" target="_blank">魔王在线</a></li>
-<li><a href="http://www.99zzpp.com/" target="_blank">99自拍</a></li>
 <li><a href="http://go.60990.biz/" target="_blank">蝌蚪窝</a></li>
 <li><a href="https://www.uuzy03.com/" target="_blank">悠色资源网</a></li>
 <li><a href="http://lvn77.com/" target="_blank">撸女神</a></li>
@@ -341,17 +336,13 @@
 <li><a href="http://www.7mav.net/" target="_blank">7M视频</a></li>
 <li><a href="http://avpapa.co/" target="_blank">Avpapa</a></li>
 <li><a href="http://www.5xxx1.com/" target="_blank">5X社区</a></li>
-<li><a href="http://www.56ava.com/" target="_blank">桃花岛</a></li>
 <li><a href="http://www.qqqqmao.com/" target="_blank">东京热</a></li>
 <li><a href="http://999ss99.com/" target="_blank">久久热视频</a></li>
 <li><a href="http://qyl7.com/" target="_blank">青娱乐视频</a></li>
 <li><a href="http://www.boboru.com/" target="_blank">波波乳</a></li>
 <li><a href="http://www.aotu9.com/" target="_blank">凹凸视频</a></li>
 <li><a href="http://www.lu2363.com/" target="_blank">撸尔山</a></li>
-<li><a href="http://qjj22.com/" target="_blank">骑姐姐</a></li>
-<li><a href="http://www.8858av.com/" target="_blank">天天撸</a></li>
 <li><a href="http://www.qingjunlu3.com/" target="_blank">请君撸</a></li>
-<li><a href="http://www.8858av.com/" target="_blank">撸撸网</a></li>
 <li><a href="http://www.aiqqc.com/" target="_blank">青青草</a></li>
 <li><a href="http://www.jimohd.com/" target="_blank">寂寞草</a></li>
 <li><a href="http://www.zz1212.com/" target="_blank">姐姐要爱</a></li>
@@ -373,18 +364,15 @@
 <li><a href="https://www.w832.com/" target="_blank">202z</a></li>
 <li><a href="http://www.lupian50.com/" target="_blank">撸片迷在线</a></li>
 <li><a href="https://pigav.com/" target="_blank">朱古力</a></li>
-<li><a href="http://avjidi.net/" target="_blank">AV基地</a></li>
-<li><a href="http://99rr11.com/" target="_blank">久久视频</a></li>
-<li><a href="http://hgg156.com/" target="_blank">坏哥哥</a></li>
 <li><a href="http://ddc400.com/" target="_blank">陌上花</a></li>
+<li><a href="http://www.rr1919.com/" target="_blank">丁香五月</a></li>
 <li><a href="http://www.twav13.com/" target="_blank">AV中文</a></li>
 <li><a href="http://kuav.tv/" target="_blank">高清在线AV</a></li>
 <li><a href="http://fcw3.com/" target="_blank">废柴视频网</a></li>
 <li><a href="http://www.youppp.com/" target="_blank">有B吗？</a></li>
-<li><a href="http://www.7u8e.com/" target="_blank">第九鲁</a></li>
 <li><a href="http://www.777vid.com/" target="_blank">PLAY 视频</a></li>
 <li><a href="http://www.13jiuseteng.com/" target="_blank">九涩腾</a></li>
-<li><a href="http://www.meimei7.com/" target="_blank">在线手机视频</a></li>
+<li><a href="http://www.kk-av.com/" target="_blank">在线手机视频</a></li>
 <li><a href="https://avhd101.com/" target="_blank">AVHD101</a></li>
 <li><a href="http://www.uukk8822.com/" target="_blank">宅男频道</a></li>
 <li><a href="http://www.megaline.co/Cazn2" target="_blank">91porn</a></li>
@@ -403,7 +391,7 @@
 <li><a href="https://www.tnaflix.com/" target="_blank">TNAFlix</a></li>
 <li><a href="http://www.keezmovies.com/" target="_blank">keezm</a></li>
 <li><a href="http://www.hd21.com/" target="_blank">Hd21</a></li>
-<li><a href="http://instantfap.com/" target="_blank">InstantFap</a></li>
+<li><a href="http://instantfap.com/" target="_blank">精彩片断</a></li>
 <li><a href="http://www.longsextube.net/" target="_blank">Longsex</a></li>
 <li><a href="http://www.kuntfutube.com/" target="_blank">KuntFu Tube</a></li>
 <li><a href="http://www.pornomovies.com/" target="_blank">PornoMovies</a></li>
@@ -419,7 +407,7 @@
 <li><a href="http://www.tubxporn.com/" target="_blank">TUBXPORN</a></li>
 <li><a href="http://www.seemyporn.com/" target="_blank">SeeMyPorn</a></li>
 <li><a href="https://xhamster.com/" target="_blank">xHamster</a></li>
-<li><a href="http://www.xvideos.com/" target="_blank">XVIDEOS</a></li>
+<li><a href="https://www.xvideos.com/" target="_blank">XVIDEOS</a></li>
 <li><a href="http://www.blacksexfuckingvideos.com/" target="_blank">BlackSex</a></li>
 <li><a href="http://www.hoodamateurs.com/" target="_blank">HOOD AMATEURS</a></li>
 <li><a href="http://www.freejizzvideos.com/" target="_blank">Free Jizz</a></li>
@@ -444,9 +432,11 @@
 <li><a href="http://www.porno23.com/" target="_blank">Porno23</a></li>
 <li><a href="http://lentaporno.com/" target="_blank">LentaPorno</a></li>
 <li><a href="http://www.poimel.org/" target="_blank">poimel</a></li>
+<li><a href="http://www.plashporn.com/" target="_blank">PlashPorn</a></li>
+<li><a href="http://www.teenporntube.xxx/" target="_blank">TeenPornTube</a></li>
+<li><a href="http://datoporn.com/" target="_blank">DatoPorn</a></li>
 <li><a href="https://www.vporn.com/" target="_blank">vPorn</a></li>
 <li><a href="http://vtrahe.porn/" target="_blank">VTRAHE</a></li>
-<li><a href="http://porn8x.net/" target="_blank">porn8x</a></li>
 <li><a href="http://www.asianpornmovies.com/" target="_blank">Asian Porn Movies</a></li>
 <li><a href="http://www.azzzian.com/" target="_blank">Asian Tube</a></li>
 <li><a href="http://sextop1.net/" target="_blank">SexTop1</a></li>
@@ -530,7 +520,6 @@
 <li><a href="http://league-of-hentai.com/" target="_blank">League of Hentai</a></li>
 <li><a href="http://www.ahri8.com/" target="_blank">松鼠症倉庫</a></li>
 <li><a href="http://hentaiplay.net/" target="_blank">hentaiplay</a></li>
-<li><a href="http://erolord.com/" target="_blank">Hentai online</a></li>
 <li><a href="http://hentai.animestigma.com/" target="_blank">Hentai Stigma</a></li>
 <li><a href="http://hentaistream.com/" target="_blank">Hentai Stream</a></li>
 <li><a href="http://www.hentai.xxx/" target="_blank">Hentai xxx</a></li>
@@ -645,7 +634,10 @@
 <li><a href="http://www.yaozy.com/" target="_blank">番号大全</a></li>
 <li><a href="http://javpop.biz/" target="_blank">JAVPOP</a></li>
 <li><a href="http://mo777.net/" target="_blank">Dioguitar23</a></li>
+<li><a href="http://gojav.xyz/" target="_blank">GoJAV</a></li>
 <li><a href="http://gravure.com/tour/pages/index.php" target="_blank">GRAVURE</a></li>
+<li><a href="http://www.new-av.com/" target="_blank">92avday</a></li>
+<li><a href="http://www.javdatabase.com/" target="_blank">JAV Database</a></li>
 <li><a href="http://javarchive.com/" target="_blank">JavArchive</a></li>
 <li><a href="http://marks.fm/contents/" target="_blank">AV事務所</a></li>
 <li><a href="http://sougouwiki.com/" target="_blank">素人系総合wiki</a></li>
@@ -762,7 +754,7 @@
 <li><a href="http://www.mm131.com/" target="_blank">MM131</a></li>
 <li><a href="http://jigadori.fkoji.com/" target="_blank">Twitter美女</a></li>
 <li><a href="http://www.dbmeinv.com/" target="_blank">豆瓣美女</a></li>
-<li><a href="http://www.pornpicc.com/" target="_blank">妹子图控</a></li>
+<li><a href="http://119.23.24.149/" target="_blank">妹子图控</a></li>
 <li><a href="http://www.baituce.com/" target="_blank">百图册</a></li>
 <li><a href="http://www.sousi8.cc/" target="_blank">搜丝吧</a></li>
 <li><a href="http://www.18av.com/" target="_blank">18av性感美女</a></li>
