--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 		<div class="linkl">
 		<ul>
 <li><a href="http://cl.giit.us/index.php?u=296710&ext=96e5d" target="_blank">草榴社区</a></li>
-<li><a href="http://lady.cf/" target="_blank">精品福利</a></li>
+<li><a href="http://give.ga/" target="_blank">精品福利</a></li>
 <li><a href="http://papa60.com/?fromuid=8" target="_blank">啪啪社区</a></li>
 <li><a href="http://fl47.co/?fromuid=5495" target="_blank">福利社区</a></li>
 <li><a href="http://lovecityclub.com/bt/?u=701541" target="_blank">爱城</a></li>
@@ -59,12 +59,12 @@
 <li><a href="http://174.127.195.198/bbs/index.php" target="_blank">色中色</a></li>
 <li><a href="http://104.194.212.12/forum/?fromuid=11991220" target="_blank">第一会所</a></li>
 <li><a href="http://se8girl.com/?fromuid=1096417" target="_blank">性吧春暖花开</a></li>
-<li><a href="http://www.gaohaolu.win/" target="_blank">高好撸</a></li>
+<li><a href="http://www.gaohaolu.com/" target="_blank">高好撸</a></li>
 <li><a href="http://lu6vip.com/" target="_blank">撸6VIP论坛</a></li>
 <li><a href="http://www.henhenlu999.xyz/" target="_blank">狠狠撸第二站</a></li>
 <li><a href="http://www.xinghao.ml/?fromuid=18" target="_blank">性好论坛</a></li>
 <li><a href="http://www.hong07.com/" target="_blank">红秀资源网</a></li>
-<li><a href="http://xisezi.info/?fromuid=80" target="_blank">Xisezi精品</a></li>
+<li><a href="http://xisezi.tech/?fromuid=80" target="_blank">Xisezi精品</a></li>
 <li><a href="http://www.porna5.com/" target="_blank">Porn采集者</a></li>
 <li><a href="http://www.qiseshequ.info/" target="_blank">奇色社区</a></li>
 <li><a href="http://www.ppzy8.in/" target="_blank">啪啪资源吧</a></li>
@@ -149,7 +149,7 @@
 <li><a href="http://cl.8qb.xyz/index.php?u=296710&ext=96e5d" target="_blank">草榴社区2</a></li>
 <li><a href="http://cl.5ug.pw/index.php?u=296710&ext=96e5d" target="_blank">草榴社区3</a></li>
 <li><a href="http://dz.zk0.info/index.php?u=296710&ext=96e5d" target="_blank">草榴社区4</a></li>
-<li><a href="http://c6.3hx.info/index.php?u=296710&ext=96e5d" target="_blank">草榴社区5</a></li>
+<li><a href="http://cl.wa3.co/index.php?u=296710&ext=96e5d" target="_blank">草榴社区5</a></li>
 <li><a href="http://cl.eg3.bid/index.php?u=296710&ext=96e5d" target="_blank">草榴社区6</a></li>
 <li><a href="http://cl.yf6.win/index.php?u=296710&ext=96e5d" target="_blank">草榴社区7</a></li>
 				    </ul>
@@ -164,7 +164,7 @@
 <li><a href="http://5genvpiao.com/" target="_blank">五姑娘导航</a></li>
 <li><a href="http://landh.club/" target="_blank">蓝导航</a></li> 
 <li><a href="http://doufu2.com/" target="_blank">豆福色导航</a></li>
-<li><a href="http://www.fulidh.cf/" target="_blank">柠檬导航</a></li> 
+<li><a href="http://fulidh.gq/" target="_blank">柠檬导航</a></li> 
 <li><a href="http://www.xinfuli.info/" target="_blank">新福利导航</a></li>
 <li><a href="http://www.1080dh.com/" target="_blank">1080导航</a></li>
 <li><a href="http://www.bagunian.info/" target="_blank">八姑娘导航</a></li>
@@ -289,29 +289,30 @@
 <li><a href="http://www.1xs6.com/" target="_blank">久久热精品</a></li>
 <li><a href="http://www.666jjy.com/" target="_blank">涩情小电影</a></li>
 <li><a href="http://www.gogo199.com/" target="_blank">妓出阁</a></li>
-<li><a href="http://www.saoniu.net/" target="_blank">骚妞在线</a></li>
 <li><a href="http://www.6666my.cn/" target="_blank">夏娃高清视频</a></li>
 <li><a href="http://www.smporn.xyz/" target="_blank">神魔在线</a></li>
 <li><a href="http://www.sesexia.com/" target="_blank">超快色色下</a></li>
 <li><a href="http://www.taoluyingyuan.com/" target="_blank">套路影院</a></li>
 <li><a href="http://www.99zzf.com/" target="_blank">大香蕉网</a></li>
-<li><a href="http://www.ppp166.com/" target="_blank">伦理片大全</a></li>
 <li><a href="http://591ys.top/" target="_blank">噜噜阁在线</a></li>
-<li><a href="http://www.eeey123.com/" target="_blank">88微拍福利</a></li>
-<li><a href="http://www.yyy151.com/" target="_blank">光棍影院</a></li>
-<li><a href="http://www.tvtv98.com/" target="_blank">婷婷五月</a></li>
 <li><a href="http://www.52x.club/" target="_blank">我爱插</a></li>
 <li><a href="http://www.langnizi.com/" target="_blank">浪妮子视频</a></li>
 <li><a href="http://www.lxx01.co/" target="_blank">撸穴穴</a></li>
 <li><a href="http://www.avzhao.cc/" target="_blank">找AV上</a></li>
-<li><a href="http://www.luse501.com/" target="_blank">撸撸色视频</a></li>
-<li><a href="http://www.hhl501.com/" target="_blank">狠狠撸在线</a></li>
 <li><a href="http://www.kedougood.com/" target="_blank">柯兜在线</a></li>
-<li><a href="http://www.caoliu6av.com/" target="_blank">草榴6av在线</a></li>
-<li><a href="http://www.mmsao.club/" target="_blank">妹妹骚</a></li>
+<li><a href="http://avlu.biz/" target="_blank">撸啊撸</a></li>
+<li><a href="http://www.xingaigeav.xyz/" target="_blank">性爱阁AV</a></li>
+<li><a href="http://www.dadiaoav.xyz/" target="_blank">大屌AV</a></li>
 <li><a href="http://www.taohua8.ml/" target="_blank">桃花视频</a></li>
 <li><a href="http://www.fx1200.com/" target="_blank">咪咪影院</a></li>
-<li><a href="http://avlu.biz/" target="_blank">撸啊撸</a></li>
+<li><a href="http://www.caoliu6av.com/" target="_blank">草榴6av在线</a></li>
+<li><a href="http://www.mmsao.club/" target="_blank">妹妹骚</a></li>
+<li><a href="http://www.hhl501.com/" target="_blank">狠狠撸在线</a></li>
+<li><a href="http://www.luse501.com/" target="_blank">撸撸色视频</a></li>
+<li><a href="http://www.eeey123.com/" target="_blank">88微拍福利</a></li>
+<li><a href="http://www.yyy151.com/" target="_blank">光棍影院</a></li>
+<li><a href="http://www.tvtv98.com/" target="_blank">婷婷五月</a></li>
+<li><a href="http://www.ppp166.com/" target="_blank">伦理片大全</a></li>
 <li><a href="http://www.51ganb.com/" target="_blank">官人我要</a></li>
 <li><a href="http://www.ikanav.com/" target="_blank">爱看AV</a></li>
 <li><a href="http://www.db66.cc/" target="_blank">AV在线视频</a></li>
@@ -361,6 +362,8 @@
 <li><a href="http://zhs.lxxlx.com/" target="_blank">LXXLX</a></li>
 <li><a href="http://6666fuli.com/" target="_blank">6666视频</a></li>
 <li><a href="http://www.vid999.com/" target="_blank">vid999</a></li>
+<li><a href="http://xbgirl.com/" target="_blank">XBgirl</a></li>
+<li><a href="https://www.youav.com/" target="_blank">YouAV</a></li>
 <li><a href="http://www.yjizz0.com/" target="_blank">YouJizz</a></li>
 <li><a href="http://huaidushi.info/" target="_blank">坏都市</a></li>
 <li><a href="http://www.700zyz.com/" target="_blank">97资源站</a></li>
@@ -390,14 +393,18 @@
 		<div class="linkl">
 		<ul>
 <li><a href="http://beemtube.com/" target="_blank">BeemTube</a></li>
+<li><a href="https://www.redtube.com/" target="_blank">Redtube</a></li>
 <li><a href="http://egbo.com/" target="_blank">EGBO</a></li>
 <li><a href="https://www.tnaflix.com/" target="_blank">TNAFlix</a></li>
 <li><a href="http://www.keezmovies.com/" target="_blank">keezm</a></li>
 <li><a href="http://www.hd21.com/" target="_blank">Hd21</a></li>
-<li><a href="http://instantfap.com/" target="_blank">精彩片断</a></li>
 <li><a href="http://www.longsextube.net/" target="_blank">Longsex</a></li>
 <li><a href="http://www.kuntfutube.com/" target="_blank">KuntFu Tube</a></li>
 <li><a href="http://www.pornomovies.com/" target="_blank">PornoMovies</a></li>
+<li><a href="http://instantfap.com/" target="_blank">精彩片断</a></li>
+<li><a href="http://www.kanporno.com/" target="_blank">观看涩情</a></li>
+<li><a href="http://maturetubeporn.xyz/" target="_blank">Maturetubeporn</a></li>
+<li><a href="http://lxxlx.com/" target="_blank">LXXLX</a></li>
 <li><a href="http://thisvid.com/" target="_blank">ThisVid</a></li>
 <li><a href="http://www.shameless.com/" target="_blank">Shameless</a></li>
 <li><a href="http://userporn.com/" target="_blank">Userporn</a></li>
@@ -439,9 +446,7 @@
 <li><a href="http://www.teenporntube.xxx/" target="_blank">TeenPornTube</a></li>
 <li><a href="http://datoporn.com/" target="_blank">DatoPorn</a></li>
 <li><a href="https://www.vporn.com/" target="_blank">vPorn</a></li>
-<li><a href="http://vtrahe.porn/" target="_blank">VTRAHE</a></li>
 <li><a href="http://www.asianpornmovies.com/" target="_blank">Asian Porn Movies</a></li>
-<li><a href="http://www.azzzian.com/" target="_blank">Asian Tube</a></li>
 <li><a href="http://sextop1.net/" target="_blank">SexTop1</a></li>
 <li><a href="http://javhd.today/" target="_blank">Jav HD</a></li>
 <li><a href="http://javhihi.com/" target="_blank">JavHiHi</a></li>
