--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
 <li><a href="http://www.dabodh.com/" target="_blank">大波导航</a></li>
 <li><a href="http://www.fulidh.info/" target="_blank">夜火福利导航</a></li>
 <li><a href="http://74fuli.net/" target="_blank">骑士福利导航</a></li>
-<li><a href="http://fuli3758.com/" target="_blank">辣椒导航</a></li>
+<li><a href="http://kanse.ml/" target="_blank">辣椒导航</a></li>
 <li><a href="http://bigefuli.com/" target="_blank">逼格福利导航</a></li>
 <li><a href="http://www.uusdh.com/" target="_blank">悠悠色导航</a></li>
 <li><a href="http://www.idiyi.biz/" target="_blank">第一色导航</a></li>
@@ -299,6 +299,7 @@
 <li><a href="http://www.langnizi.com/" target="_blank">浪妮子视频</a></li>
 <li><a href="http://www.lxx01.co/" target="_blank">撸穴穴</a></li>
 <li><a href="http://www.avzhao.cc/" target="_blank">找AV上</a></li>
+<li><a href="http://www.remeiav.com/" target="_blank">热妹AV在线</a></li>
 <li><a href="http://www.kedougood.com/" target="_blank">柯兜在线</a></li>
 <li><a href="http://avlu.biz/" target="_blank">撸啊撸</a></li>
 <li><a href="http://www.xingaigeav.xyz/" target="_blank">性爱阁AV</a></li>
@@ -356,6 +357,7 @@
 <li><a href="http://www.00bobo.com/" target="_blank">37pao</a></li>
 <li><a href="http://8833hao.com/" target="_blank">995hao</a></li>
 <li><a href="http://caoporn.pink/" target="_blank">CaoPorn</a></li>
+<li><a href="http://www.helloavgirls.com/" target="_blank">HelloAVGirls</a></li>
 <li><a href="http://koreanfilmhdcollections.blogspot.jp/" target="_blank">韩国三极</a></li>
 <li><a href="http://cat3movie.us/" target="_blank">海外三极</a></li>
 <li><a href="http://www.168porn.net/" target="_blank">IAVporn</a></li>
@@ -459,6 +461,7 @@
 <li><a href="https://www.pornsia.com/" target="_blank">Pornsia</a></li>
 <li><a href="http://www.jmetube.com/" target="_blank">JMETube</a></li>
 <li><a href="http://www.tokyoporn.com/" target="_blank">TokyoPorn</a></li>
+<li><a href="https://xxxfk.com/" target="_blank">xxxfk</a></li>
 <li><a href="http://muryouav-house.com/" target="_blank">無料ＡＶハウス</a></li>
 <li><a href="http://www.adult-sex-porn-tv.com/" target="_blank">Adult TV</a></li>
 				    </ul>
@@ -495,12 +498,13 @@
 <li><a href="https://lxty66.com/" target="_blank">莲秀图院</a></li>
 <li><a href="http://huaban.com/boards/16607428/" target="_blank">爱莲说</a></li>
 <li><a href="http://voyeurhit.com/" target="_blank">偷拍视频</a></li>
-<li><a href="http://bdsmland.org/" target="_blank">Bdsmland</a></li>
+<li><a href="http://africanlesbians.com/" target="_blank">黑人女同视频</a></li>
 <li><a href="http://www.oklesbians.com/" target="_blank">OK LesBians</a></li>
 <li><a href="http://www.thelesbianporn.com/" target="_blank">Lesbian Porn</a></li>
 <li><a href="http://www.ladyboyweb.com/" target="_blank">Ladyboyweb</a></li>
 <li><a href="http://www.trannytube.name/" target="_blank">Tranny Tube</a></li>
 <li><a href="http://www.slavestube.com/" target="_blank">Slaves Tube</a></li>
+<li><a href="http://bdsmland.org/" target="_blank">Bdsmland</a></li>
 <li><a href="http://japanbdsm.com/" target="_blank">Japan BDSM</a></li>
 				    </ul>
 		</div>
