--- a/index.html
+++ b/index.html
@@ -205,7 +205,7 @@
 <li><a href="http://www.yikufl.com/" target="_blank">一库福利导航</a></li>
 <li><a href="http://69dh.top/" target="_blank">69宅男福利导航</a></li>
 <li><a href="http://www.dafjdh.com/" target="_blank">打飞机导航</a></li>
-<li><a href="http://yeyeliu.top/" target="_blank">夜夜流</a></li>
+<li><a href="http://yyliu.top/" target="_blank">夜夜流</a></li>
 <li><a href="http://www.caoluotuo.org/" target="_blank">草骆驼导航</a></li>
 <li><a href="http://www.lw78.cc/" target="_blank">老王福利导航</a></li>
 <li><a href="http://dh.19xa.com/" target="_blank">福利导航</a></li>
@@ -361,6 +361,7 @@
 <li><a href="http://www.00bobo.com/" target="_blank">37pao</a></li>
 <li><a href="http://8833hao.com/" target="_blank">995hao</a></li>
 <li><a href="http://caoporn.pink/" target="_blank">CaoPorn</a></li>
+<li><a href="http://www.qqjav.com/" target="_blank">HAOJAVHD</a></li>
 <li><a href="http://www.helloavgirls.com/" target="_blank">HelloAVGirls</a></li>
 <li><a href="http://koreanfilmhdcollections.blogspot.jp/" target="_blank">韩国三极</a></li>
 <li><a href="http://cat3movie.us/" target="_blank">海外三极</a></li>
@@ -374,6 +375,7 @@
 <li><a href="http://huaidushi.info/" target="_blank">坏都市</a></li>
 <li><a href="http://www.700zyz.com/" target="_blank">97资源站</a></li>
 <li><a href="https://www.w832.com/" target="_blank">202z</a></li>
+<li><a href="http://www.niuniure003.com/" target="_blank">牛牛热</a></li>
 <li><a href="http://www.lupian50.com/" target="_blank">撸片迷在线</a></li>
 <li><a href="https://pigav.com/" target="_blank">朱古力</a></li>
 <li><a href="http://ddc400.com/" target="_blank">陌上花</a></li>
